--- a/index.html
+++ b/index.html
@@ -47,18 +47,13 @@
     </iframe>
   </div>
 
-  <div class="guestbook">
-    <h2>Sổ Lưu Bút - Saving Memories With Your Words &lt;3</h2>
-    <p>Cảm ơn bạn rất nhiều vì đã gửi những lời chúc mừng tốt đẹp nhất đến đám cưới của chúng tôi!</p>
-    <div class="guestbook-content">
-      <form id="guestForm">
-        <input type="text" id="name" placeholder="Nhập họ tên*" required>
-        <input type="email" id="email" placeholder="Nhập email" required>
-        <textarea id="message" placeholder="Nhập lời chúc của bạn*" required></textarea>
-        <button type="submit">Gửi lời chúc</button>
-      </form>
-      <div id="messages" class="messages-list"></div>
-    </div>
+   <div class="guestbook">
+    <h2>Sổ Lưu Bút</h2>
+    <iframe 
+      src="LINK_GOOGLE_FORM_EMBED" 
+      width="100%" 
+      height="600" 
+      frameborder="0">Đang tải…</iframe>
   </div>
 
   <script src="script.js"></script>
