--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    <div class="guestbook">
     <h2>Sổ Lưu Bút</h2>
     <iframe 
-      src="LINK_GOOGLE_FORM_EMBED" 
+      src="https://docs.google.com/forms/d/1K1WkJ4SMHpTkUEDCqM4MFnvqd0FXz9c-w0wZ5ZNXbIE/edit" 
       width="100%" 
       height="600" 
       frameborder="0">Đang tải…</iframe>
